--- a/Engine/ColorVision.Engine/Properties/Resources.en.resx
+++ b/Engine/ColorVision.Engine/Properties/Resources.en.resx
@@ -1230,4 +1230,82 @@
   <data name="SMUAddr" xml:space="preserve">
     <value>Source table address</value>
   </data>
+  <data name="IntegrationTime" xml:space="preserve">
+    <value>Points Time</value>
+  </data>
+  <data name="AutoIntegra" xml:space="preserve">
+    <value>Automatic points</value>
+  </data>
+  <data name="AutoZeroCalibration" xml:space="preserve">
+    <value>Automatic zeroing</value>
+  </data>
+  <data name="AdaptiveZeroCalibration" xml:space="preserve">
+    <value>Adaptive zeroing</value>
+  </data>
+  <data name="SingleTest" xml:space="preserve">
+    <value>Single test</value>
+  </data>
+  <data name="AutoTest" xml:space="preserve">
+    <value>Automated testing</value>
+  </data>
+  <data name="SingleZeroCalibration" xml:space="preserve">
+    <value>Single zeroing</value>
+  </data>
+  <data name="DelayMs" xml:space="preserve">
+    <value>Delay (ms)</value>
+  </data>
+  <data name="SpectrumInfo" xml:space="preserve">
+    <value>Spectrometer Information</value>
+  </data>
+  <data name="AutoTestInterval_Ms" xml:space="preserve">
+    <value>Automatic test interval (ms)</value>
+  </data>
+  <data name="MaxIntegrationTime_Ms" xml:space="preserve">
+    <value>Maximum integration time (ms)</value>
+  </data>
+  <data name="StartIntegrationTime_Ms" xml:space="preserve">
+    <value>Starting integration time (ms)</value>
+  </data>
+  <data name="OpenCmd" xml:space="preserve">
+    <value>Open command</value>
+  </data>
+  <data name="CloseCmd" xml:space="preserve">
+    <value>Close command</value>
+  </data>
+  <data name="Filecfg" xml:space="preserve">
+    <value>File Configuration</value>
+  </data>
+  <data name="CalibrationFile" xml:space="preserve">
+    <value>Correction documents</value>
+  </data>
+  <data name="CameraType" xml:space="preserve">
+    <value>Camera model</value>
+  </data>
+  <data name="CamreaMode" xml:space="preserve">
+    <value>Camera mode</value>
+  </data>
+  <data name="DefaultCaptureMode" xml:space="preserve">
+    <value>Default image retrieval mode</value>
+  </data>
+  <data name="DefaultChannelCount" xml:space="preserve">
+    <value>Default number of channels</value>
+  </data>
+  <data name="DefaultImageBits" xml:space="preserve">
+    <value>Default image bit depth</value>
+  </data>
+  <data name="FilterWheel" xml:space="preserve">
+    <value>Color filter wheel</value>
+  </data>
+  <data name="EnableSerialPort" xml:space="preserve">
+    <value>Enable serial port transmission</value>
+  </data>
+  <data name="FilterWheelNum" xml:space="preserve">
+    <value>Number of color filters</value>
+  </data>
+  <data name="RegistryCenterConfig" xml:space="preserve">
+    <value>Registration Center Configuration</value>
+  </data>
+  <data name="RCName" xml:space="preserve">
+    <value>Registration Center Name</value>
+  </data>
 </root>
