--- a/Engine/ColorVision.Engine/Properties/Resources.ko.resx
+++ b/Engine/ColorVision.Engine/Properties/Resources.ko.resx
@@ -1230,4 +1230,82 @@
   <data name="SMUAddr" xml:space="preserve">
     <value>소스 테이블 주소</value>
   </data>
+  <data name="IntegrationTime" xml:space="preserve">
+    <value>포인트 시간</value>
+  </data>
+  <data name="AutoIntegra" xml:space="preserve">
+    <value>자동 포인트</value>
+  </data>
+  <data name="AutoZeroCalibration" xml:space="preserve">
+    <value>자동 제로화</value>
+  </data>
+  <data name="AdaptiveZeroCalibration" xml:space="preserve">
+    <value>적응형 제로화</value>
+  </data>
+  <data name="SingleTest" xml:space="preserve">
+    <value>단일 테스트</value>
+  </data>
+  <data name="AutoTest" xml:space="preserve">
+    <value>자동화된 테스트</value>
+  </data>
+  <data name="SingleZeroCalibration" xml:space="preserve">
+    <value>단일 제로화</value>
+  </data>
+  <data name="DelayMs" xml:space="preserve">
+    <value>지연(ms)</value>
+  </data>
+  <data name="SpectrumInfo" xml:space="preserve">
+    <value>분광기 정보</value>
+  </data>
+  <data name="AutoTestInterval_Ms" xml:space="preserve">
+    <value>자동 테스트 간격(ms)</value>
+  </data>
+  <data name="MaxIntegrationTime_Ms" xml:space="preserve">
+    <value>최대 통합 시간(ms)</value>
+  </data>
+  <data name="StartIntegrationTime_Ms" xml:space="preserve">
+    <value>시작 통합 시간(ms)</value>
+  </data>
+  <data name="OpenCmd" xml:space="preserve">
+    <value>열기 명령</value>
+  </data>
+  <data name="CloseCmd" xml:space="preserve">
+    <value>닫기 명령</value>
+  </data>
+  <data name="Filecfg" xml:space="preserve">
+    <value>파일 구성</value>
+  </data>
+  <data name="CalibrationFile" xml:space="preserve">
+    <value>정정 문서</value>
+  </data>
+  <data name="CameraType" xml:space="preserve">
+    <value>카메라 모델</value>
+  </data>
+  <data name="CamreaMode" xml:space="preserve">
+    <value>카메라 모드</value>
+  </data>
+  <data name="DefaultCaptureMode" xml:space="preserve">
+    <value>기본 이미지 검색 모드</value>
+  </data>
+  <data name="DefaultChannelCount" xml:space="preserve">
+    <value>기본 채널 수</value>
+  </data>
+  <data name="DefaultImageBits" xml:space="preserve">
+    <value>기본 이미지 비트 심도</value>
+  </data>
+  <data name="FilterWheel" xml:space="preserve">
+    <value>컬러 필터 휠</value>
+  </data>
+  <data name="EnableSerialPort" xml:space="preserve">
+    <value>직렬 포트 전송 활성화</value>
+  </data>
+  <data name="FilterWheelNum" xml:space="preserve">
+    <value>색상 필터의 수</value>
+  </data>
+  <data name="RegistryCenterConfig" xml:space="preserve">
+    <value>등록 센터 구성</value>
+  </data>
+  <data name="RCName" xml:space="preserve">
+    <value>등록 센터 이름</value>
+  </data>
 </root>
