--- a/Engine/ColorVision.Engine/Properties/Resources.ja.resx
+++ b/Engine/ColorVision.Engine/Properties/Resources.ja.resx
@@ -1230,4 +1230,7 @@
   <data name="SMUAddr" xml:space="preserve">
     <value>ソーステーブルアドレス</value>
   </data>
+  <data name="QueryMethods" xml:space="preserve">
+    <value>クエリメソッド</value>
+  </data>
 </root>
