--- a/Engine/ColorVision.Engine/Properties/Resources.resx
+++ b/Engine/ColorVision.Engine/Properties/Resources.resx
@@ -1314,4 +1314,7 @@
   <data name="ServiceCode" xml:space="preserve">
     <value>服务代码</value>
   </data>
+  <data name="QueryMethods" xml:space="preserve">
+    <value>查询方法</value>
+  </data>
 </root>
