--- a/Engine/ColorVision.Engine/Properties/Resources.ru.resx
+++ b/Engine/ColorVision.Engine/Properties/Resources.ru.resx
@@ -1308,4 +1308,13 @@
   <data name="RCName" xml:space="preserve">
     <value>Название регистрационного центра</value>
   </data>
+  <data name="RCConnecteCfg" xml:space="preserve">
+    <value>Конфигурация подключения к центру регистрации</value>
+  </data>
+  <data name="ServiceCode" xml:space="preserve">
+    <value>Код услуги</value>
+  </data>
+  <data name="QueryMethods" xml:space="preserve">
+    <value>Методы запроса</value>
+  </data>
 </root>
