--- a/Engine/ColorVision.Engine/Properties/Resources.zh-Hant.resx
+++ b/Engine/ColorVision.Engine/Properties/Resources.zh-Hant.resx
@@ -1308,4 +1308,13 @@
   <data name="RCName" xml:space="preserve">
     <value>註冊中心名稱</value>
   </data>
+  <data name="RCConnecteCfg" xml:space="preserve">
+    <value>註冊中心連線配置</value>
+  </data>
+  <data name="ServiceCode" xml:space="preserve">
+    <value>服務代碼</value>
+  </data>
+  <data name="QueryMethods" xml:space="preserve">
+    <value>查詢方法</value>
+  </data>
 </root>
