--- a/Engine/ColorVision.Engine/Properties/Resources.en.resx
+++ b/Engine/ColorVision.Engine/Properties/Resources.en.resx
@@ -553,7 +553,7 @@
     <value>Export</value>
   </data>
   <data name="ExecutionProcess" xml:space="preserve">
-    <value>Excute</value>
+    <value>Execute</value>
   </data>
   <data name="Exchange" xml:space="preserve">
     <value>Exchange</value>
