--- a/Engine/ColorVision.Engine/Properties/Resources.en.resx
+++ b/Engine/ColorVision.Engine/Properties/Resources.en.resx
@@ -1308,4 +1308,163 @@
   <data name="RCName" xml:space="preserve">
     <value>Registration Center Name</value>
   </data>
+  <data name="RCConnecteCfg" xml:space="preserve">
+    <value>Registration Center Connection Configuration</value>
+  </data>
+  <data name="ServiceCode" xml:space="preserve">
+    <value>Service Code</value>
+  </data>
+  <data name="QuaryMethods" xml:space="preserve">
+    <value>Query methods</value>
+  </data>
+  <data name="MotorAcceleration" xml:space="preserve">
+    <value>Motor acceleration</value>
+  </data>
+  <data name="MotorSteadySpeed" xml:space="preserve">
+    <value>Motor smooth running speed</value>
+  </data>
+  <data name="MotorConfig" xml:space="preserve">
+    <value>Motor configuration</value>
+  </data>
+  <data name="MotorDeceleration" xml:space="preserve">
+    <value>Motor deceleration</value>
+  </data>
+  <data name="HomingAcceleration" xml:space="preserve">
+    <value>acceleration when returning to the origin</value>
+  </data>
+  <data name="HomingMethod" xml:space="preserve">
+    <value>Return to origin method</value>
+  </data>
+  <data name="HomingTimeout" xml:space="preserve">
+    <value>Return to origin timeout</value>
+  </data>
+  <data name="HighSpeedHoming" xml:space="preserve">
+    <value>Return to origin at high speed</value>
+  </data>
+  <data name="LowSpeedHoming" xml:space="preserve">
+    <value>Return to origin at low speed</value>
+  </data>
+  <data name="MotorMoveRangeLowerLimit" xml:space="preserve">
+    <value>lower limit of motor movement range</value>
+  </data>
+  <data name="MotorMoveRangeupperLimit" xml:space="preserve">
+    <value>upper limit of motor movement range</value>
+  </data>
+  <data name="FocusImageCount" xml:space="preserve">
+    <value>Focus on the number of images</value>
+  </data>
+  <data name="ConfigMotor" xml:space="preserve">
+    <value>Configure motor</value>
+  </data>
+  <data name="CameraLinkage" xml:space="preserve">
+    <value>Camera linkage</value>
+  </data>
+  <data name="TemperatureCtrl" xml:space="preserve">
+    <value>Temperature control</value>
+  </data>
+  <data name="TemperatureTarget" xml:space="preserve">
+    <value>Target temperature</value>
+  </data>
+  <data name="TempQuaryInterval_S" xml:space="preserve">
+    <value>Temperature query time interval (s)</value>
+  </data>
+  <data name="usbTraffic" xml:space="preserve">
+    <value>Transmission rate</value>
+  </data>
+  <data name="offset" xml:space="preserve">
+    <value>Offset</value>
+  </data>
+  <data name="CameraParam" xml:space="preserve">
+    <value>Camera parameters</value>
+  </data>
+  <data name="DefaultGain" xml:space="preserve">
+    <value>Default Gain</value>
+  </data>
+  <data name="MinGain" xml:space="preserve">
+    <value>Minimum gain</value>
+  </data>
+  <data name="MaxGain" xml:space="preserve">
+    <value>Maximum gain</value>
+  </data>
+  <data name="DefaultExpTime" xml:space="preserve">
+    <value>Expose default values</value>
+  </data>
+  <data name="MinExpTime" xml:space="preserve">
+    <value>Minimum exposure</value>
+  </data>
+  <data name="MaxExpTime" xml:space="preserve">
+    <value>Maximum exposure</value>
+  </data>
+  <data name="DataSavePath" xml:space="preserve">
+    <value>Data storage path</value>
+  </data>
+  <data name="AddGroup" xml:space="preserve">
+    <value>Add group</value>
+  </data>
+  <data name="DeleteGroup" xml:space="preserve">
+    <value>Delete group</value>
+  </data>
+  <data name="ExportCalibration" xml:space="preserve">
+    <value>Export Correction</value>
+  </data>
+  <data name="CreateCalibration" xml:space="preserve">
+    <value>Create correction</value>
+  </data>
+  <data name="ExpTime" xml:space="preserve">
+    <value>exposure</value>
+  </data>
+  <data name="Focus" xml:space="preserve">
+    <value>focal length</value>
+  </data>
+  <data name="FocusDistance" xml:space="preserve">
+    <value>Focusing distance</value>
+  </data>
+  <data name="Selected" xml:space="preserve">
+    <value>Selected</value>
+  </data>
+  <data name="DarkNoise" xml:space="preserve">
+    <value>dark noise</value>
+  </data>
+  <data name="DefectPoint" xml:space="preserve">
+    <value>Defects</value>
+  </data>
+  <data name="ColorShift" xml:space="preserve">
+    <value>Color deviation</value>
+  </data>
+  <data name="Distortion" xml:space="preserve">
+    <value>distortion</value>
+  </data>
+  <data name="Uniformity" xml:space="preserve">
+    <value>Uniform field</value>
+  </data>
+  <data name="ColorDiff" xml:space="preserve">
+    <value>ColorDiff</value>
+  </data>
+  <data name="Brightness" xml:space="preserve">
+    <value>brightness</value>
+  </data>
+  <data name="OneColor" xml:space="preserve">
+    <value>monochrome</value>
+  </data>
+  <data name="FourColor" xml:space="preserve">
+    <value>Four colors</value>
+  </data>
+  <data name="MultiColor" xml:space="preserve">
+    <value>Multicolor</value>
+  </data>
+  <data name="CalibrationFileManagement" xml:space="preserve">
+    <value>Caliberation File Management</value>
+  </data>
+  <data name="UploadCalibrationGroup" xml:space="preserve">
+    <value>Upload caliberation group</value>
+  </data>
+  <data name="CalibrationGroupManagement" xml:space="preserve">
+    <value>Calibration Group Management</value>
+  </data>
+  <data name="OpenConfigFolder" xml:space="preserve">
+    <value>Open the configuration folder</value>
+  </data>
+  <data name="CaliberationParamSet" xml:space="preserve">
+    <value>Calibration parameter settings</value>
+  </data>
 </root>
