--- a/Engine/ColorVision.Engine/Properties/Resources.fr.resx
+++ b/Engine/ColorVision.Engine/Properties/Resources.fr.resx
@@ -1308,4 +1308,163 @@
   <data name="RCName" xml:space="preserve">
     <value>Nom du centre d'inscription</value>
   </data>
+  <data name="RCConnecteCfg" xml:space="preserve">
+    <value>Configuration de la connexion au centre d'inscription</value>
+  </data>
+  <data name="ServiceCode" xml:space="preserve">
+    <value>Code de service</value>
+  </data>
+  <data name="QuaryMethods" xml:space="preserve">
+    <value>Méthodes de requête</value>
+  </data>
+  <data name="MotorAcceleration" xml:space="preserve">
+    <value>Accélération du moteur</value>
+  </data>
+  <data name="MotorSteadySpeed" xml:space="preserve">
+    <value>vitesse de fonctionnement régulière du moteur</value>
+  </data>
+  <data name="MotorConfig" xml:space="preserve">
+    <value>Configuration du moteur</value>
+  </data>
+  <data name="MotorDeceleration" xml:space="preserve">
+    <value>Décélération du moteur</value>
+  </data>
+  <data name="HomingAcceleration" xml:space="preserve">
+    <value>accélération lors du retour à l'origine</value>
+  </data>
+  <data name="HomingMethod" xml:space="preserve">
+    <value>Méthode de retour à l'origine</value>
+  </data>
+  <data name="HomingTimeout" xml:space="preserve">
+    <value>Délai d'attente dépassé pour le retour à l'origine</value>
+  </data>
+  <data name="HighSpeedHoming" xml:space="preserve">
+    <value>Retour à l'origine à grande vitesse</value>
+  </data>
+  <data name="LowSpeedHoming" xml:space="preserve">
+    <value>Retour à l'origine à faible vitesse</value>
+  </data>
+  <data name="MotorMoveRangeLowerLimit" xml:space="preserve">
+    <value>limite inférieure de l'amplitude des mouvements moteurs</value>
+  </data>
+  <data name="MotorMoveRangeupperLimit" xml:space="preserve">
+    <value>limite supérieure de l'amplitude des mouvements moteurs</value>
+  </data>
+  <data name="FocusImageCount" xml:space="preserve">
+    <value>Concentrez-vous sur le nombre d'images</value>
+  </data>
+  <data name="ConfigMotor" xml:space="preserve">
+    <value>Configurer le moteur</value>
+  </data>
+  <data name="CameraLinkage" xml:space="preserve">
+    <value>Liaison de la caméra</value>
+  </data>
+  <data name="TemperatureCtrl" xml:space="preserve">
+    <value>Contrôle de la température</value>
+  </data>
+  <data name="TemperatureTarget" xml:space="preserve">
+    <value>Température cible</value>
+  </data>
+  <data name="TempQuaryInterval_S" xml:space="preserve">
+    <value>Intervalle de temps de requête de température (s)</value>
+  </data>
+  <data name="usbTraffic" xml:space="preserve">
+    <value>débit de transmission</value>
+  </data>
+  <data name="offset" xml:space="preserve">
+    <value>Compenser</value>
+  </data>
+  <data name="CameraParam" xml:space="preserve">
+    <value>Paramètres de la caméra</value>
+  </data>
+  <data name="DefaultGain" xml:space="preserve">
+    <value>Gain par défaut</value>
+  </data>
+  <data name="MinGain" xml:space="preserve">
+    <value>Gain minimum</value>
+  </data>
+  <data name="MaxGain" xml:space="preserve">
+    <value>Gain maximal</value>
+  </data>
+  <data name="DefaultExpTime" xml:space="preserve">
+    <value>Afficher les valeurs par défaut</value>
+  </data>
+  <data name="MinExpTime" xml:space="preserve">
+    <value>exposition minimale</value>
+  </data>
+  <data name="MaxExpTime" xml:space="preserve">
+    <value>Exposition maximale</value>
+  </data>
+  <data name="DataSavePath" xml:space="preserve">
+    <value>Chemin de stockage des données</value>
+  </data>
+  <data name="AddGroup" xml:space="preserve">
+    <value>Ajouter un groupe</value>
+  </data>
+  <data name="DeleteGroup" xml:space="preserve">
+    <value>Supprimer le groupe</value>
+  </data>
+  <data name="ExportCalibration" xml:space="preserve">
+    <value>Correction d'exportation</value>
+  </data>
+  <data name="CreateCalibration" xml:space="preserve">
+    <value>Créer une correction</value>
+  </data>
+  <data name="ExpTime" xml:space="preserve">
+    <value>exposition</value>
+  </data>
+  <data name="Focus" xml:space="preserve">
+    <value>distance focale</value>
+  </data>
+  <data name="FocusDistance" xml:space="preserve">
+    <value>Distance de mise au point</value>
+  </data>
+  <data name="Selected" xml:space="preserve">
+    <value>Choisi</value>
+  </data>
+  <data name="DarkNoise" xml:space="preserve">
+    <value>bruit sombre</value>
+  </data>
+  <data name="DefectPoint" xml:space="preserve">
+    <value>Défauts</value>
+  </data>
+  <data name="ColorShift" xml:space="preserve">
+    <value>Écart de couleur</value>
+  </data>
+  <data name="Distortion" xml:space="preserve">
+    <value>distorsion</value>
+  </data>
+  <data name="Uniformity" xml:space="preserve">
+    <value>Champ uniforme</value>
+  </data>
+  <data name="ColorDiff" xml:space="preserve">
+    <value>ColorDiff</value>
+  </data>
+  <data name="Brightness" xml:space="preserve">
+    <value>luminosité</value>
+  </data>
+  <data name="OneColor" xml:space="preserve">
+    <value>monochrome</value>
+  </data>
+  <data name="FourColor" xml:space="preserve">
+    <value>Quatre couleurs</value>
+  </data>
+  <data name="MultiColor" xml:space="preserve">
+    <value>Multicolore</value>
+  </data>
+  <data name="CalibrationFileManagement" xml:space="preserve">
+    <value>Gestion des fichiers de correction</value>
+  </data>
+  <data name="UploadCalibrationGroup" xml:space="preserve">
+    <value>Groupe de correction des téléchargements</value>
+  </data>
+  <data name="CalibrationGroupManagement" xml:space="preserve">
+    <value>Gestion du groupe d'étalonnage</value>
+  </data>
+  <data name="OpenConfigFolder" xml:space="preserve">
+    <value>Ouvrez le dossier de configuration</value>
+  </data>
+  <data name="CaliberationParamSet" xml:space="preserve">
+    <value>Paramètres d'étalonnage</value>
+  </data>
 </root>
