--- a/Engine/ColorVision.Engine/Properties/Resources.ko.resx
+++ b/Engine/ColorVision.Engine/Properties/Resources.ko.resx
@@ -1308,4 +1308,163 @@
   <data name="RCName" xml:space="preserve">
     <value>등록 센터 이름</value>
   </data>
+  <data name="RCConnecteCfg" xml:space="preserve">
+    <value>등록 센터 연결 구성</value>
+  </data>
+  <data name="ServiceCode" xml:space="preserve">
+    <value>서비스 코드</value>
+  </data>
+  <data name="QuaryMethods" xml:space="preserve">
+    <value>쿼리 방법</value>
+  </data>
+  <data name="MotorAcceleration" xml:space="preserve">
+    <value>모터 가속</value>
+  </data>
+  <data name="MotorSteadySpeed" xml:space="preserve">
+    <value>모터의 원활한 작동 속도</value>
+  </data>
+  <data name="MotorConfig" xml:space="preserve">
+    <value>모터 구성</value>
+  </data>
+  <data name="MotorDeceleration" xml:space="preserve">
+    <value>모터 감속</value>
+  </data>
+  <data name="HomingAcceleration" xml:space="preserve">
+    <value>원점으로 복귀할 때의 가속도</value>
+  </data>
+  <data name="HomingMethod" xml:space="preserve">
+    <value>원점 복귀 방법</value>
+  </data>
+  <data name="HomingTimeout" xml:space="preserve">
+    <value>원점으로 돌아가기 시간 초과</value>
+  </data>
+  <data name="HighSpeedHoming" xml:space="preserve">
+    <value>고속으로 원점으로 복귀</value>
+  </data>
+  <data name="LowSpeedHoming" xml:space="preserve">
+    <value>저속으로 원점으로 복귀</value>
+  </data>
+  <data name="MotorMoveRangeLowerLimit" xml:space="preserve">
+    <value>모터 운동 범위의 하한</value>
+  </data>
+  <data name="MotorMoveRangeupperLimit" xml:space="preserve">
+    <value>모터 운동 범위의 상한</value>
+  </data>
+  <data name="FocusImageCount" xml:space="preserve">
+    <value>이미지의 개수에 집중하세요</value>
+  </data>
+  <data name="ConfigMotor" xml:space="preserve">
+    <value>모터 구성</value>
+  </data>
+  <data name="CameraLinkage" xml:space="preserve">
+    <value>카메라 연결</value>
+  </data>
+  <data name="TemperatureCtrl" xml:space="preserve">
+    <value>온도 조절</value>
+  </data>
+  <data name="TemperatureTarget" xml:space="preserve">
+    <value>목표 온도</value>
+  </data>
+  <data name="TempQuaryInterval_S" xml:space="preserve">
+    <value>온도 쿼리 시간 간격(초)</value>
+  </data>
+  <data name="usbTraffic" xml:space="preserve">
+    <value>전송 속도</value>
+  </data>
+  <data name="offset" xml:space="preserve">
+    <value>오프셋</value>
+  </data>
+  <data name="CameraParam" xml:space="preserve">
+    <value>카메라 매개변수</value>
+  </data>
+  <data name="DefaultGain" xml:space="preserve">
+    <value>기본 이득</value>
+  </data>
+  <data name="MinGain" xml:space="preserve">
+    <value>최소 이득</value>
+  </data>
+  <data name="MaxGain" xml:space="preserve">
+    <value>최대 이득</value>
+  </data>
+  <data name="DefaultExpTime" xml:space="preserve">
+    <value>기본값 노출</value>
+  </data>
+  <data name="MinExpTime" xml:space="preserve">
+    <value>최소 노출</value>
+  </data>
+  <data name="MaxExpTime" xml:space="preserve">
+    <value>최대 노출</value>
+  </data>
+  <data name="DataSavePath" xml:space="preserve">
+    <value>데이터 저장 경로</value>
+  </data>
+  <data name="AddGroup" xml:space="preserve">
+    <value>그룹 추가</value>
+  </data>
+  <data name="DeleteGroup" xml:space="preserve">
+    <value>그룹 삭제</value>
+  </data>
+  <data name="ExportCalibration" xml:space="preserve">
+    <value>수출 정정</value>
+  </data>
+  <data name="CreateCalibration" xml:space="preserve">
+    <value>수정을 생성하세요</value>
+  </data>
+  <data name="ExpTime" xml:space="preserve">
+    <value>노출</value>
+  </data>
+  <data name="Focus" xml:space="preserve">
+    <value>초점거리</value>
+  </data>
+  <data name="FocusDistance" xml:space="preserve">
+    <value>초점 거리</value>
+  </data>
+  <data name="Selected" xml:space="preserve">
+    <value>선택된</value>
+  </data>
+  <data name="DarkNoise" xml:space="preserve">
+    <value>어두운 소음</value>
+  </data>
+  <data name="DefectPoint" xml:space="preserve">
+    <value>결함</value>
+  </data>
+  <data name="ColorShift" xml:space="preserve">
+    <value>색상 편차</value>
+  </data>
+  <data name="Distortion" xml:space="preserve">
+    <value>왜곡</value>
+  </data>
+  <data name="Uniformity" xml:space="preserve">
+    <value>균일한 필드</value>
+  </data>
+  <data name="ColorDiff" xml:space="preserve">
+    <value>색상 차이</value>
+  </data>
+  <data name="Brightness" xml:space="preserve">
+    <value>명도</value>
+  </data>
+  <data name="OneColor" xml:space="preserve">
+    <value>단색화</value>
+  </data>
+  <data name="FourColor" xml:space="preserve">
+    <value>사색</value>
+  </data>
+  <data name="MultiColor" xml:space="preserve">
+    <value>다색</value>
+  </data>
+  <data name="CalibrationFileManagement" xml:space="preserve">
+    <value>수정 파일 관리</value>
+  </data>
+  <data name="UploadCalibrationGroup" xml:space="preserve">
+    <value>수정 그룹 업로드</value>
+  </data>
+  <data name="CalibrationGroupManagement" xml:space="preserve">
+    <value>교정 그룹 관리</value>
+  </data>
+  <data name="OpenConfigFolder" xml:space="preserve">
+    <value>구성 폴더를 엽니다</value>
+  </data>
+  <data name="CaliberationParamSet" xml:space="preserve">
+    <value>교정 매개변수 설정</value>
+  </data>
 </root>
