--- a/Engine/ColorVision.Engine/Properties/Resources.ru.resx
+++ b/Engine/ColorVision.Engine/Properties/Resources.ru.resx
@@ -1308,4 +1308,163 @@
   <data name="RCName" xml:space="preserve">
     <value>Название регистрационного центра</value>
   </data>
+  <data name="RCConnecteCfg" xml:space="preserve">
+    <value>Конфигурация подключения к центру регистрации</value>
+  </data>
+  <data name="ServiceCode" xml:space="preserve">
+    <value>Код услуги</value>
+  </data>
+  <data name="QuaryMethods" xml:space="preserve">
+    <value>Методы запроса</value>
+  </data>
+  <data name="MotorAcceleration" xml:space="preserve">
+    <value>Ускорение двигателя</value>
+  </data>
+  <data name="MotorSteadySpeed" xml:space="preserve">
+    <value>Скорость плавного хода двигателя</value>
+  </data>
+  <data name="MotorConfig" xml:space="preserve">
+    <value>Конфигурация двигателя</value>
+  </data>
+  <data name="MotorDeceleration" xml:space="preserve">
+    <value>Замедление двигателя</value>
+  </data>
+  <data name="HomingAcceleration" xml:space="preserve">
+    <value>ускорение при возвращении в исходное положение</value>
+  </data>
+  <data name="HomingMethod" xml:space="preserve">
+    <value>Метод возврата к исходному состоянию</value>
+  </data>
+  <data name="HomingTimeout" xml:space="preserve">
+    <value>Тайм-аут возврата в исходное состояние</value>
+  </data>
+  <data name="HighSpeedHoming" xml:space="preserve">
+    <value>Возвращение в исходную точку на высокой скорости</value>
+  </data>
+  <data name="LowSpeedHoming" xml:space="preserve">
+    <value>Возвращение в исходную точку на низкой скорости</value>
+  </data>
+  <data name="MotorMoveRangeLowerLimit" xml:space="preserve">
+    <value>нижний предел диапазона двигательных движений</value>
+  </data>
+  <data name="MotorMoveRangeupperLimit" xml:space="preserve">
+    <value>верхний предел диапазона двигательных движений</value>
+  </data>
+  <data name="FocusImageCount" xml:space="preserve">
+    <value>Сосредоточьтесь на количестве изображений</value>
+  </data>
+  <data name="ConfigMotor" xml:space="preserve">
+    <value>Настроить двигатель</value>
+  </data>
+  <data name="CameraLinkage" xml:space="preserve">
+    <value>Соединение камеры</value>
+  </data>
+  <data name="TemperatureCtrl" xml:space="preserve">
+    <value>Контроль температуры</value>
+  </data>
+  <data name="TemperatureTarget" xml:space="preserve">
+    <value>Целевая температура</value>
+  </data>
+  <data name="TempQuaryInterval_S" xml:space="preserve">
+    <value>Интервал времени запроса температуры (с)</value>
+  </data>
+  <data name="usbTraffic" xml:space="preserve">
+    <value>Скорость передачи</value>
+  </data>
+  <data name="offset" xml:space="preserve">
+    <value>Компенсировать</value>
+  </data>
+  <data name="CameraParam" xml:space="preserve">
+    <value>Параметры камеры</value>
+  </data>
+  <data name="DefaultGain" xml:space="preserve">
+    <value>Коэффициент усиления по умолчанию</value>
+  </data>
+  <data name="MinGain" xml:space="preserve">
+    <value>Минимальный прирост</value>
+  </data>
+  <data name="MaxGain" xml:space="preserve">
+    <value>Максимальный прирост</value>
+  </data>
+  <data name="DefaultExpTime" xml:space="preserve">
+    <value>Вывести значения по умолчанию</value>
+  </data>
+  <data name="MinExpTime" xml:space="preserve">
+    <value>Минимальная экспозиция</value>
+  </data>
+  <data name="MaxExpTime" xml:space="preserve">
+    <value>Максимальная экспозиция</value>
+  </data>
+  <data name="DataSavePath" xml:space="preserve">
+    <value>Путь хранения данных</value>
+  </data>
+  <data name="AddGroup" xml:space="preserve">
+    <value>Добавить группу</value>
+  </data>
+  <data name="DeleteGroup" xml:space="preserve">
+    <value>Удалить группу</value>
+  </data>
+  <data name="ExportCalibration" xml:space="preserve">
+    <value>Экспортная коррекция</value>
+  </data>
+  <data name="CreateCalibration" xml:space="preserve">
+    <value>Создать исправление</value>
+  </data>
+  <data name="ExpTime" xml:space="preserve">
+    <value>контакт</value>
+  </data>
+  <data name="Focus" xml:space="preserve">
+    <value>фокусное расстояние</value>
+  </data>
+  <data name="FocusDistance" xml:space="preserve">
+    <value>Расстояние фокусировки</value>
+  </data>
+  <data name="Selected" xml:space="preserve">
+    <value>Выбранный</value>
+  </data>
+  <data name="DarkNoise" xml:space="preserve">
+    <value>темный шум</value>
+  </data>
+  <data name="DefectPoint" xml:space="preserve">
+    <value>Дефекты</value>
+  </data>
+  <data name="ColorShift" xml:space="preserve">
+    <value>Отклонение цвета</value>
+  </data>
+  <data name="Distortion" xml:space="preserve">
+    <value>искажение</value>
+  </data>
+  <data name="Uniformity" xml:space="preserve">
+    <value>Равномерное поле</value>
+  </data>
+  <data name="ColorDiff" xml:space="preserve">
+    <value>ColorDiff</value>
+  </data>
+  <data name="Brightness" xml:space="preserve">
+    <value>яркость</value>
+  </data>
+  <data name="OneColor" xml:space="preserve">
+    <value>монохромный</value>
+  </data>
+  <data name="FourColor" xml:space="preserve">
+    <value>Четыре цвета</value>
+  </data>
+  <data name="MultiColor" xml:space="preserve">
+    <value>Многоцветный</value>
+  </data>
+  <data name="CalibrationFileManagement" xml:space="preserve">
+    <value>Управление файлами исправлений</value>
+  </data>
+  <data name="UploadCalibrationGroup" xml:space="preserve">
+    <value>Загрузить группу исправлений</value>
+  </data>
+  <data name="CalibrationGroupManagement" xml:space="preserve">
+    <value>Управление калибровочной группой</value>
+  </data>
+  <data name="OpenConfigFolder" xml:space="preserve">
+    <value>Откройте папку конфигурации</value>
+  </data>
+  <data name="CaliberationParamSet" xml:space="preserve">
+    <value>Настройки параметров калибровки</value>
+  </data>
 </root>
