--- a/Engine/ColorVision.Engine/Properties/Resources.ru.resx
+++ b/Engine/ColorVision.Engine/Properties/Resources.ru.resx
@@ -1317,4 +1317,25 @@
   <data name="QueryMethods" xml:space="preserve">
     <value>Методы запроса</value>
   </data>
+  <data name="MaxNumber" xml:space="preserve">
+    <value>Максимальное количество</value>
+  </data>
+  <data name="CalibrationViewSettings" xml:space="preserve">
+    <value>Правильная конфигурация представления</value>
+  </data>
+  <data name="ShowList" xml:space="preserve">
+    <value>Показать список</value>
+  </data>
+  <data name="ListHeight" xml:space="preserve">
+    <value>Высота списка</value>
+  </data>
+  <data name="EditCalibration" xml:space="preserve">
+    <value>Редактировать файл исправлений</value>
+  </data>
+  <data name="BeforeCalibrationSetupPhysicalCamera" xml:space="preserve">
+    <value>Перед использованием калибровки настройте соответствующую физическую камеру.</value>
+  </data>
+  <data name="FileSavePath" xml:space="preserve">
+    <value>Путь сохранения файла</value>
+  </data>
 </root>
