--- a/Engine/ColorVision.Engine/Properties/Resources.fr.resx
+++ b/Engine/ColorVision.Engine/Properties/Resources.fr.resx
@@ -1318,4 +1318,25 @@
   <data name="QueryMethods" xml:space="preserve">
     <value>Méthodes de requête</value>
   </data>
+  <data name="MaxNumber" xml:space="preserve">
+    <value>quantité maximale</value>
+  </data>
+  <data name="CalibrationViewSettings" xml:space="preserve">
+    <value>Configuration d'affichage correcte</value>
+  </data>
+  <data name="ShowList" xml:space="preserve">
+    <value>Afficher la liste</value>
+  </data>
+  <data name="ListHeight" xml:space="preserve">
+    <value>Hauteur de la liste</value>
+  </data>
+  <data name="EditCalibration" xml:space="preserve">
+    <value>Fichier de correction de modification</value>
+  </data>
+  <data name="BeforeCalibrationSetupPhysicalCamera" xml:space="preserve">
+    <value>Avant d'utiliser l'étalonnage, veuillez configurer la caméra physique correspondante.</value>
+  </data>
+  <data name="FileSavePath" xml:space="preserve">
+    <value>chemin d'enregistrement du fichier</value>
+  </data>
 </root>
