--- a/Engine/ColorVision.Engine/Properties/Resources.ko.resx
+++ b/Engine/ColorVision.Engine/Properties/Resources.ko.resx
@@ -1317,4 +1317,25 @@
   <data name="QueryMethods" xml:space="preserve">
     <value>쿼리 방법</value>
   </data>
+  <data name="MaxNumber" xml:space="preserve">
+    <value>최대 수량</value>
+  </data>
+  <data name="CalibrationViewSettings" xml:space="preserve">
+    <value>올바른 뷰 구성</value>
+  </data>
+  <data name="ShowList" xml:space="preserve">
+    <value>목록 보기</value>
+  </data>
+  <data name="ListHeight" xml:space="preserve">
+    <value>목록 높이</value>
+  </data>
+  <data name="EditCalibration" xml:space="preserve">
+    <value>수정 파일 편집</value>
+  </data>
+  <data name="BeforeCalibrationSetupPhysicalCamera" xml:space="preserve">
+    <value>보정을 사용하기 전에 해당 물리적 카메라를 구성하세요.</value>
+  </data>
+  <data name="FileSavePath" xml:space="preserve">
+    <value>파일 저장 경로</value>
+  </data>
 </root>
