--- a/Engine/ColorVision.Engine/Properties/Resources.ja.resx
+++ b/Engine/ColorVision.Engine/Properties/Resources.ja.resx
@@ -1467,4 +1467,19 @@
   <data name="CaliberationParamSet" xml:space="preserve">
     <value>キャリブレーションパラメータ設定</value>
   </data>
+  <data name="TemperatureDataNotFound" xml:space="preserve">
+    <value>対応する温度データが見つかりません</value>
+  </data>
+  <data name="ErrorQueryingTemperatureData" xml:space="preserve">
+    <value>温度データの照会中にエラーが発生しました。</value>
+  </data>
+  <data name="SaveCurrentExposureConfigPrompt" xml:space="preserve">
+    <value>現在の露出設定を保存しますか?</value>
+  </data>
+  <data name="EditCalibrationFile" xml:space="preserve">
+    <value>修正ファイルを編集する</value>
+  </data>
+  <data name="FileSavePath" xml:space="preserve">
+    <value>ファイルの保存パス</value>
+  </data>
 </root>
