--- a/Engine/ColorVision.Engine/Properties/Resources.fr.resx
+++ b/Engine/ColorVision.Engine/Properties/Resources.fr.resx
@@ -1467,4 +1467,19 @@
   <data name="CaliberationParamSet" xml:space="preserve">
     <value>Paramètres d'étalonnage</value>
   </data>
+  <data name="TemperatureDataNotFound" xml:space="preserve">
+    <value>Aucune donnée de température correspondante trouvée</value>
+  </data>
+  <data name="ErrorQueryingTemperatureData" xml:space="preserve">
+    <value>Une erreur s'est produite lors de la requête des données de température.</value>
+  </data>
+  <data name="SaveCurrentExposureConfigPrompt" xml:space="preserve">
+    <value>Souhaitez-vous enregistrer la configuration d'exposition actuelle ?</value>
+  </data>
+  <data name="EditCalibrationFile" xml:space="preserve">
+    <value>Fichier de correction de modification</value>
+  </data>
+  <data name="FileSavePath" xml:space="preserve">
+    <value>chemin d'enregistrement du fichier</value>
+  </data>
 </root>
