--- a/Engine/ColorVision.Engine/Properties/Resources.resx
+++ b/Engine/ColorVision.Engine/Properties/Resources.resx
@@ -1467,4 +1467,34 @@
   <data name="CaliberationParamSet" xml:space="preserve">
     <value>校正参数设置</value>
   </data>
+  <data name="EditCalibration" xml:space="preserve">
+    <value>编辑矫正文件</value>
+  </data>
+  <data name="BeforeCalibrationSetupPhysicalCamera" xml:space="preserve">
+    <value>使用校正前，请先配置相机</value>
+  </data>
+  <data name="CalibrationViewSettings" xml:space="preserve">
+    <value>校正视图配置</value>
+  </data>
+  <data name="ShowList" xml:space="preserve">
+    <value>显示列表</value>
+  </data>
+  <data name="TemperatureDataNotFound" xml:space="preserve">
+    <value>未获得温度数据</value>
+  </data>
+  <data name="ListHeight" xml:space="preserve">
+    <value>列表高度</value>
+  </data>
+  <data name="MaxNumber" xml:space="preserve">
+    <value>最大数量</value>
+  </data>
+  <data name="SaveCurrentExposureConfigPrompt" xml:space="preserve">
+    <value>是否保存当前界面的曝光配置</value>
+  </data>
+  <data name="FileSavePath" xml:space="preserve">
+    <value>文件保存路径</value>
+  </data>
+  <data name="ErrorQueryingTemperatureData" xml:space="preserve">
+    <value>查询温度数据时发生错误</value>
+  </data>
 </root>
